apps/ionic/medval/src/app/app.scss
/**
 * Created by Chinmay Nagarkar on 9/30/2016.
 * Copyright HC Technology Inc.
 * Please do not copy without permission. This code may not be used outside
 * of this application without permission. Copying and re-posting on another
 * site or application without licensing is strictly prohibited.
 */
// http://ionicframework.com/docs/v2/theming/


// App Global Sass
// --------------------------------------------------
// Put style rules here that you want to apply globally. These
// styles are for the entire app and not just one component.
// Additionally, this file can be also used as an entry point
// to import other Sass files to be included in the output CSS.
//
// Shared Sass variables, which can be used to adjust Ionic's
// default Sass variables, belong in "theme/variables.scss".
//
// To declare rules for a specific mode, create a child rule
// for the .md, .ios, or .wp mode classes. The mode class is
// automatically applied to the <body> element in the app.

//Global Styles
.metricHeading {
  text-align:center;
  padding:15% 15% 0 15%;
  font-size:1.5em;
}

.truncate { // This can be used with fixed width elements
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

// Scrolling Default
.scroll-content{
  overflow-y: hidden !important;
}

// Use scrollable class to scroll
.scrollable .scroll-content {
  overflow-y: scroll !important;
}


.fullwidth .alert-wrapper {
  max-width: 30em;
}

.swatchBox {
  border: 1px solid black;
}

.feedback {
  height:20%;
  max-height:30%;
  border:1px solid orange;
}

// Form like pages, like account page, staff edit page etc.
.rev-form {
  ion-input, ion-select {
    background: color($colors, white);
    border: 1px solid color($colors, grey);
    border-radius: 0.25em;
    z-index: 1;
    padding: 1px;

    .text-input, .select-text {
      padding: 1px 1px 1px 10px;
    }
  }

  ion-select {
    padding:11px
  }

  button.item-cover {
    width: auto !important;
    height: auto !important;
  }


  ion-select.rev-select {
    padding-left: 0px;
    max-width:100%;
    div.select-text {
      display: flex;
    }
  }
}

// Help
.bighelp {
  div.alert-wrapper {
    max-width:80%
  }
}

ol {
  text-align: left;
}

// Tables
ion-col.header {
  border: solid 1px grey;
  background-color:lightgrey;
  padding:10px;
}

ion-col.regular {
  border: solid 1px grey;
  padding:10px;
}

//Common App Background
.content-md, &.content-wp, &.content-ios {
    background-color: color($colors, white);
}

.has-header {
  padding-top: 4em;
}

.separator-bottom {
  border-bottom: 0.55px solid #c8c7cc; padding-bottom: 1em
}

.block {
  display:block;
}

.flex {
  display: -webkit-flex; /* Safari */
  -webkit-flex-direction: row-reverse; /* Safari 6.1+ */
  display:flex;
  flex-direction:row;
  flex-wrap: wrap;
  -webkit-transform: translateZ(0);
}

.vertical-center {
  align-items:center;
}

.horizontal-center {
  justify-content: center;
}

.nowrap {
  white-space:nowrap;
}

.feedback-text {
  padding-left: .3em;
  padding-right: 1em;
  border: solid .05em green;
}

.border-around-text {
  border-radius: 1em;
  border-color: lightgrey;
  border-style: solid;
  padding:10px;
  margin:10px;
}

.font-large {
  font-size: xx-large;
}


.pos-rel {
  position: relative;
}

.pos-fixed {
  position: fixed;
}

//Override ios border on header
.toolbar-background-ios {
  border-bottom-width: 0px;
}

.ion-icon {
  font-size:1em;
}

.item-clean {
  border: 0 none;
  background: transparent;
}

/*Custom label*/

.cstm-label {
  font-size: 1.2em !important;
}


/*Custom label padding*/

.cstm-label-pdng {
  padding-left: 0.625em;
}


/*Custom textarea with height 8em*/

.cstm-textarea-h-8 {
  height: 8em;
}


.font-40 {
  font-size:1.4em;
}

.nopadding {
  padding: 0em;
}
.p-t-1 {
  padding-top:1em
}

.m-b-1 {
  margin-bottom: 1em !important;
}

.m-b-2 {
  margin-bottom: 2em !important;
}

.m-t-0 {
  margin-top: 0 !important;
}

.m-t-0p5 {
  margin-top: 0.5em !important;
}

.m-t-1 {
  margin-top: 1em !important;
}

.m-t-2 {
  margin-top: 2em !important;
}

.m-t-3 {
  margin-top: 3em !important;
}

.m-t-3p5 {
  margin-top: 3.5em !important;
}

.m-t-4 {
  margin-top: 4em !important;
}

.m-t-5 {
  margin-top: 5em !important;
}

.m-t-6 {
  margin-top: 6em !important;
}

.m-t-8 {
  margin-top: 8em !important;
}

.m-r-05 {
  margin-right: 0.5em;
}

.m-l-1 {
  margin-left: 1em;
}

.m-l-10pct {
  margin-left: 10%;
}

.t-1 {
  top: 1em !important;
}

.t-2 {
  top: 2em !important;
}

.t-3 {
  top: 3em !important;
}

.t-3p5 {
  top: 3.5em !important;
}

.t-4 {
  top: 4em !important;
}

.b-6 {
  bottom: 6em !important;
}

/** Chart classes */
.googlechart-title-text {
  text-align:center;
}

.googlechart-header-row {
  color: white;
  font-size: 1.3em;
  background-color: color($colors, primary);
}

.googlechart-table-row {
  font-size: 1.1em;
  text-align: left;
}
.googlechart-odd-table-row {
  background-color: aliceblue;
  font-size: 1.1em;
  text-align: left;
}
.googlechart-selected-table-row {
  font-size: 1.1em;
  text-align: left;
}
.googlechart-hover-table-row {

}
.googlechart-header-cell {

}
.googlechart-table-cell {

}
.googlechart-row-number-cell {

}

/*moved unused classes from start.with.survey.option.component.scss*/

.question {
  font-style: italic;
  color: color($colors, revvolvepurple);
  font-size: 1.2em;
}

/*moved unused classes from top.influencer.component.scss*/

.ion-textarea {
  border: 1px solid #e0e0e0;
}

.selected-icon {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);

  position: absolute;
  top: 0em;
  right: 0em;
}

.alert {
  .subdued {
    color:blue;
  }

  color:blue;
}

.nobox {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

.pulse-once {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);

  box-shadow: 0 0 0 0 rgba(85, 57, 130, 0.7);
  -webkit-animation: pulse1em 2s 1 cubic-bezier(0.66, 0, 0, 1);
  -moz-animation: pulse1em 2s 1 cubic-bezier(0.66, 0, 0, 1);
  -ms-animation: pulse1em 2s 1 cubic-bezier(0.66, 0, 0, 1);
  animation: pulse1em 2s 1 cubic-bezier(0.66, 0, 0, 1);
}

.keep-pulsing {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);

  box-shadow: 0 0 0 0 rgba(85, 57, 130, 0.7);
  -webkit-animation: pulse1em 2s infinite cubic-bezier(0.66, 0, 0, 1);
  -moz-animation: pulse1em 2s infinite cubic-bezier(0.66, 0, 0, 1);
  -ms-animation: pulse1em 2s infinite cubic-bezier(0.66, 0, 0, 1);
  animation: pulse1em 2s infinite cubic-bezier(0.66, 0, 0, 1);
}

.five-second-pulse {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);

  box-shadow: 0 0 0 0 rgba(85, 57, 130, 0.7);
  -webkit-animation: pulse1em 2s 3 cubic-bezier(0.66, 0, 0, 1);
  -moz-animation: pulse1em 2s 3 cubic-bezier(0.66, 0, 0, 1);
  -ms-animation: pulse1em 2s 3 cubic-bezier(0.66, 0, 0, 1);
  animation: pulse1em 2s 30 cubic-bezier(0.66, 0, 0, 1);
}

.circleicon {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);

  font-size: 0.6em;
  border: none;
  box-shadow: 0 0 0 0 rgba(85, 57, 130, 0.7);
  border-radius: 50%;
  // http://cubic-bezier.com/#.14,.77,0,.99
  -webkit-animation: pulse2em 3s 1s 4 cubic-bezier(.14,.77,0,.99);
  -moz-animation: pulse2em 3s 1s 4 cubic-bezier(.14,.77,0,.99);
  -ms-animation: pulse2em 3s 1s 4 cubic-bezier(.14,.77,0,.99);
  animation: pulse2em 3s 1s 4 cubic-bezier(.14,.77,0,.99);

  button {
    width: 7em;
    height: 7em;

    span ion-icon {
      font-size:4em;
    }

    .button-inner {
      font-size:2em;
    }
  }
}

@-webkit-keyframes pulse2em {to {box-shadow: 0 0 0 2em rgba(0, 232, 0, 0);}}
@-moz-keyframes pulse2em {to {box-shadow: 0 0 0 2em rgba(0, 232, 0, 0);}}
@-ms-keyframes pulse2em {to {box-shadow: 0 0 0 2em rgba(0, 232, 0, 0);}}
@keyframes pulse2em {to {box-shadow: 0 0 0 2em rgba(0, 232, 0, 0);}}

@-webkit-keyframes pulse1em {to {box-shadow: 0 0 0 1em rgba(0, 232, 0, 0);}}
@-moz-keyframes pulse1em {to {box-shadow: 0 0 0 1em rgba(0, 232, 0, 0);}}
@-ms-keyframes pulse1em {to {box-shadow: 0 0 0 1em rgba(0, 232, 0, 0);}}
@keyframes pulse1em {to {box-shadow: 0 0 0 1em rgba(0, 232, 0, 0);}}

